--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+      "s": "hexo s",
+      "d": "hexo clean && hexo g && hexo d",
+      "hexo": "hexo"
+  },
   "hexo": {
     "version": "3.9.0"
   },
