--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -17,7 +17,7 @@ nav:
   home: /
   about: /about/
   articles: /archives/
-  projects: projects_url
+  projects: https://github.com/yuanshoujing
 
 
 # Links to your social media accounts.
